@@ -1,3 +1,8 @@
+2003-11-09  Per Bothner  <per@bothner.com>
+
+	* Interpreter.java (eval):  Use CallContext's startFromContext
+	and getFromContext methods.
+
 2003-11-06  Per Bothner  <per@bothner.com>
 
 	* Interpreter.java (parse): Change abstract method to take a Lexer.
